# calculator_server_UDP

./: .gitignore  README.md  pyproject.toml
calculator_server/: UDP_server.py
tests/: test_UDP_server.py
