[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calculator_server_UDP_idziegrzesprzezbobrow"
version = "0.0.2"
authors = [
  { name="Greg", email="" },
]
description = "A simple calculator_server package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    {include = "calculator_server"},
    {exclude = "tests"}
]
exclude = [
    "venv_serv",
    ".gitignore",
    ".pytest_cache"
]

[project.optional-dependencies]
test = ["pytest==7.2.0"]

[project.scripts]
calculator_server_UDP = "calculator_server.UDP_server:main"